src/test/ui/consts/const-try-feature-gate.stderr
error[E0658]: `?` is not allowed in a `const fn`
  --> $DIR/const-try-feature-gate.rs:4:5
   |
LL |     Some(())?;
   |     ^^^^^^^^^
   |
   = help: add `#![feature(const_try)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
